--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,12 +18,14 @@ dependencies:
   intl: ^0.18.1
   logger: ^2.0.1
   url_launcher: ^6.1.12
+  carousel_slider: ^4.2.1
+  flutter_launcher_icons: ^0.12.0
+  smooth_page_indicator: ^1.2.0+3
   
   # Icons
   iconsax: ^0.0.8
   cupertino_icons: ^1.0.8
-  flutter_launcher_icons: ^0.12.0
-  smooth_page_indicator: ^1.2.0+3
+
 
   # State Management
   get: ^4.6.5
@@ -56,6 +58,7 @@ flutter:
   - assets/images/onboarding/
   - assets/logos/
   - assets/images/Settings/
+  - assets/images/banners/
 
 #------------------- LOCAL FONTS -------------------# 
   fonts:
