--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+  package="com.example.segarku"> <!-- Ganti 'com.example.segar_ku' dengan package name aplikasi Anda -->
     <application
         android:label="segarku"
+        
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
