--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,9 @@ dependencies:
   # State Management
   get: ^4.6.5
   get_storage: ^2.1.1
+
   # Product Specific
+  firebase_core: ^3.8.1
 
 #------------------- ./ PACKAGES END -------------------# 
 
