--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,9 +15,11 @@ dependencies:
 
   # Utillity Package
   http: ^1.1.0
+  lottie: ^2.7.0
   intl: ^0.18.1
   logger: ^2.0.1
   url_launcher: ^6.1.12
+  connectivity_plus: ^5.0.1
   carousel_slider: ^4.2.1
   flutter_launcher_icons: ^0.12.0
   smooth_page_indicator: ^1.2.0+3
