--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  get: ^4.6.5
+  firebase_auth: ^4.5.0
+  firebase_core: ^2.25.0
+
 
   # Utillity Package
   http: ^1.1.0
@@ -30,11 +34,9 @@ dependencies:
 
 
   # State Management
-  get: ^4.6.5
   get_storage: ^2.1.1
 
   # Product Specific
-  firebase_core: ^3.8.1
 
 #------------------- ./ PACKAGES END -------------------# 
 
